--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "privacy-policy",
   "version": "0.1.0",
-  "homepage": "https://mievenfall.github.io/privacy-policy",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
